# ello

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml
src/ello/: __init__.py  app.py  chainlit.md  client.py  flow.py  prompts.py
src/ello/.chainlit/: config.toml
src/ello/.chainlit/translations/: en-US.json
src/ello/public/: script.js  styles.css
