[project]
name = "ello"
version = "0.1.0"
description = "Yet Another Chat Flow"
readme = "README.md"
authors = [
    { name = "Prayson W. Daniel", email = "prayson.pi@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.6.7",
    "litellm>=1.75.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
]
[project.urls]
Homepage = "https://github.com/proteusiq/ello"
Repository = "https://github.com/proteusiq/ello"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ello*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = [
    "integration: marks tests that require external services (deselect with '-m \"not integration\"')",
]
[tool.rumdl]
# Global options at root level
line-length = 180
disable = ["MD033"]
include = ["docs/*.md", "README.md"]
exclude = [".git",]
ignore-gitignore = false
